Adding authentication to the Gateway config

--- a/src/GatewayService/appsettings.Development.json
+++ b/src/GatewayService/appsettings.Development.json
@@ -5,12 +5,25 @@
       "Microsoft.AspNetCore": "Information"
     }
   },
+  "IdentityServiceUrl":"http://localhost:5000",
   "ReverseProxy": {
     "Routes": {
-      "auctions" : {
+      "auctionsRead" : {
         "ClusterId": "auctions",
         "Match": {
           "Path": "/auctions/{**catch-all}"
+        },
+        "Transforms": [{
+          "PathPattern":"api/auctions/{**catch-all}",
+          "Methods":["GET"]
+        }]
+      },
+      "auctionsWrite" : {
+        "ClusterId": "auctions",
+        "AuthorizationPolicy":"default",
+        "Match": {
+          "Path": "/auctions/{**catch-all}",
+          "Methods":["POST", "PUT", "DELETE"]
         },
         "Transforms": [{
           "PathPattern":"api/auctions/{**catch-all}"
@@ -40,7 +53,7 @@
       "search": {
         "Destinations": {
           "searchApi": {
-            "Address": "http://localhost:7001"
+            "Address": "http://localhost:7002"
           }
         }
       }
