Fix error in gateway service

--- a/src/GatewayService/appsettings.Development.json
+++ b/src/GatewayService/appsettings.Development.json
@@ -11,11 +11,11 @@
       "auctionsRead" : {
         "ClusterId": "auctions",
         "Match": {
-          "Path": "/auctions/{**catch-all}"
+          "Path": "/auctions/{**catch-all}",
+          "Methods":["GET"]
         },
         "Transforms": [{
           "PathPattern":"api/auctions/{**catch-all}",
-          "Methods":["GET"]
         }]
       },
       "auctionsWrite" : {
