Adding the remaining contracts

--- a/src/GatewayService/appsettings.Development.json
+++ b/src/GatewayService/appsettings.Development.json
@@ -15,7 +15,7 @@
           "Methods":["GET"]
         },
         "Transforms": [{
-          "PathPattern":"api/auctions/{**catch-all}",
+          "PathPattern":"api/auctions/{**catch-all}"
         }]
       },
       "auctionsWrite" : {
