--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,3 +53,16 @@ services:
     depends_on:
       - mongodb
       - rabbitmq
+  identity-svc:
+    image: thisisdinhtuans/identity-svc:latest
+    build: 
+      context: .
+      dockerfile: src/IdentityService/Dockerfile
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_URLS=http://+:80
+      - ConnectionStrings__DefaultConnection=Server=postgres:5432;User Id=postgres; Password=postgres;Database=identity
+    ports:
+      - 5001:80
+    depends_on:
+      - postgres
