--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -66,3 +66,13 @@ services:
       - 5001:80
     depends_on:
       - postgres
+  gateway-svc:
+    image: thisisdinhtuans/gateway-svc:latest
+    build: 
+      context: .
+      dockerfile: src/GatewayService/Dockerfile
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Docker
+      - ASPNETCORE_URLS=http://+:80
+    ports:
+      - 6001:80
