--- a/src/SearchService/Dockerfile
+++ b/src/SearchService/Dockerfile
@@ -24,4 +24,4 @@ RUN dotnet publish -c Release -o /app/src/out
 FROM mcr.microsoft.com/dotnet/aspnet:8.0
 WORKDIR /app
 COPY --from=build /app/src/out .
-ENTRYPOINT [ "dotnet", "AuctionService.dll" ]
+ENTRYPOINT [ "dotnet", "SearchService.dll" ]
