--- a/frontend/web-app/package.json
+++ b/frontend/web-app/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "flowbite-react": "^0.10.1",
     "next": "14.2.11",
+    "query-string": "^9.1.0",
     "react": "^18",
     "react-countdown": "^2.3.6",
     "react-dom": "^18",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
     "@types/node": "^20",
