Getting the access token to use to authenticate to our resource server and fix something

--- a/src/GatewayService/appsettings.json
+++ b/src/GatewayService/appsettings.json
@@ -8,36 +8,48 @@
   "AllowedHosts": "*",
   "ReverseProxy": {
     "Routes": {
-      "auctionsRead" : {
+      "auctionsRead": {
         "ClusterId": "auctions",
         "Match": {
           "Path": "/auctions/{**catch-all}",
-          "Methods":["GET"]
+          "Methods": [
+            "GET"
+          ]
         },
-        "Transforms": [{
-          "PathPattern":"api/auctions/{**catch-all}"
-        }]
+        "Transforms": [
+          {
+            "PathPattern": "api/auctions/{**catch-all}"
+          }
+        ]
       },
-      "auctionsWrite" : {
+      "auctionsWrite": {
         "ClusterId": "auctions",
-        "AuthorizationPolicy":"default",
+        "AuthorizationPolicy": "default",
         "Match": {
           "Path": "/auctions/{**catch-all}",
-          "Methods":["POST", "PUT", "DELETE"]
+          "Methods": [
+            "POST",
+            "PUT",
+            "DELETE"
+          ]
         },
-        "Transforms": [{
-          "PathPattern":"api/auctions/{**catch-all}"
-        }]
+        "Transforms": [
+          {
+            "PathPattern": "api/auctions/{**catch-all}"
+          }
+        ]
       },
       "search": {
-        "ClusterId":"search",
+        "ClusterId": "search",
         "Match": {
-          "Path":"/search/{**catch-all}",
-          "Methods":["GET"]
+          "Path": "/search/{**catch-all}",
+          "Methods": [
+            "GET"
+          ]
         },
-        "Transforms":[
+        "Transforms": [
           {
-            "PathPattern":"api/search/{**catch-all}"
+            "PathPattern": "api/search/{**catch-all}"
           }
         ]
       }
