--- a/frontend/web-app/package.json
+++ b/frontend/web-app/package.json
@@ -18,6 +18,7 @@
     "react-datepicker": "^7.4.0",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "zustand": "^5.0.0-rc.2"
   },
