--- a/src/GatewayService/appsettings.Docker.json
+++ b/src/GatewayService/appsettings.Docker.json
@@ -22,6 +22,13 @@
             "Address": "http://search-svc"
           }
         }
+      },
+      "bids": {
+        "Destinations": {
+          "searchApi": {
+            "Address": "http://bid-svc"
+          }
+        }
       }
     }
   }
