Adding CORS support to the Gateway

--- a/src/GatewayService/appsettings.json
+++ b/src/GatewayService/appsettings.json
@@ -6,6 +6,7 @@
     }
   },
   "AllowedHosts": "*",
+  "ClientApp": "http://localhost:3000",
   "ReverseProxy": {
     "Routes": {
       "auctionsRead": {
@@ -56,6 +57,7 @@
       "bidsWrite": {
         "ClusterId": "bids",
         "AuthorizationPolicy": "default",
+        "CorsPolicy": "customPolicy",
         "Match": {
           "Path": "/bids",
           "Methods": [
