--- a/src/GatewayService/appsettings.Docker.json
+++ b/src/GatewayService/appsettings.Docker.json
@@ -1,4 +1,3 @@
-
 {
   "Logging": {
     "LogLevel": {
@@ -25,7 +24,7 @@
       },
       "bids": {
         "Destinations": {
-          "searchApi": {
+          "bidApi": {
             "Address": "http://bid-svc"
           }
         }
